# sudoku_solver

./: .gitignore  CNAME  Dockerfile  README.md  asset-manifest.json  index.html  package-lock.json  package.json
.github/workflows/: workflow.yml
public/: index.html
src/: App.css  App.tsx  CellBase.tsx  CellNumber.tsx  ColRowCell.tsx  Message.ts  NumberCell.tsx  SudokuBoard.tsx  SudokuCell.tsx  SudokuController.tsx  board.ts  i18n.ts  index.tsx  util.ts
static/css/: main.36cde8c5.css  main.36cde8c5.css.map  main.813c20e6.css  main.813c20e6.css.map  main.c2951985.css  main.c2951985.css.map
static/js/: 787.39e63a35.chunk.js  787.39e63a35.chunk.js.map  main.17a3da19.js  main.17a3da19.js.map  main.1e9c7319.js  main.1e9c7319.js.map  main.1eea92a1.js  main.1eea92a1.js.map  main.2f8d4ec0.js  main.2f8d4ec0.js.map  main.31f37ff2.js  main.31f37ff2.js.map  main.591aba67.js  main.591aba67.js.map  main.5bb86849.js  main.5bb86849.js.map  main.aca96591.js  main.aca96591.js.map  main.c326c2fa.js  main.c326c2fa.js.map
static/media/: wasm_bg.1ec27279bec88cee08f0.wasm  wasm_bg.3db773c42279bbc45c0e.wasm  wasm_bg.c5027fb65f5b7f5f53b2.wasm  wasm_bg.d0bae5076df54c28f263.wasm  wasm_bg.d6e140281bb522f9a884.wasm
wasm/: Cargo.toml
wasm/benches/: solve_benchmark.rs
wasm/src/: lib.rs  number_options.rs  solve_report.rs  sudoku_board.rs  sudoku_examples.rs  sudoku_solver.rs  util.rs
wasm/test_data/: tests_4000.csv
