[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html.

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.81"
getrandom = { version = "0.2.7", features = ["js"] }
rand = "0.8.5"
wee_alloc = "0.4.5"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "solve_benchmark"
harness = false

[profile.release]
lto = true
opt-level = 3

